Fixed some spacing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
 body {
     margin: 0;
     font-family: 'Poppins', Arial, sans-serif;
@@ -61,7 +63,7 @@ header {
 
 .subjects {
     background-color: #eeeeee;
-    padding: 100px 10px; /* Increase the padding to add more grey margin on top and bottom */
+    padding: 100px 10px;
     margin-bottom: 0;
 }
 
@@ -180,7 +182,6 @@ header {
 }
 
 .what-we-offer {
-    padding: 50px 0;
     background-color: white;
     margin-bottom: 20px;
     border: none;
@@ -189,14 +190,14 @@ header {
 .what-we-offer h2 {
     font-size: 3rem;
     font-weight: bold;
-    padding: 50px 0;
+    padding: 20px 0;
     margin-bottom: 30px;
 }
 
 .offerings {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 130px;
 }
 
 .offering {
